--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.10.0",
+    "mysql2": "^3.10.2",
     "sequelize": "^6.37.3",
     "sequelize-auto": "^0.8.8"
   },
@@ -17,5 +17,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
